# image-search-engine-for-flickr-photos-gallery

./: .gitignore  README.md  download_images.ipynb  embedding_model.py  get_images_embeddings.ipynb  image_search_engine.ipynb  requirements.txt  setup.cfg
notebooks/: download_images.ipynb  get_images_embeddings.ipynb  image_search_engine.ipynb
src/: download.py  model.py
src/image_search_engine/: download.py  model.py
