[metadata]
name = image_search_engine
version = 0.1.0
author = Daniel Verdú
author_email = daniel.verdu.torres@gmail.com
license = BSD 3-Clause License
url = ""
description = Python package that contains utils functions to develop an image search engine for 15k Valencia run
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = image_search_engine, setuptools
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.7
package_dir=
    =src
packages = find:
# zip_safe = True
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude = tests
where = src
